# paper_tracker

./: .env.example  .gitignore  README.md  apparent_motion_review.md  bib.tex  export_static.py  pyproject.toml  requirements.txt  run.py  run_digest.py
.github/workflows/: daily_digest.yml
app/: arxiv_scraper.py  config.py  database.py  embeddings.py  lit_review_generator.py  lit_review_models.py  lit_review_router.py  main.py  notifications.py  paper_fetcher.py  relevance_agent.py  summarizer.py
data/: apparent_motion_review.md  ebm_tracker.db  seed_embeddings.npy  seed_ids.json  umap_viz.json
docs/: index.html  umap.json
paper_discover/: DEPLOYMENT.md  __init__.py  cli.py  digest.py  mcp_server.py  seeds.py
paper_discover/candidates/: db.py  queries.py  schema.sql  signals.py
paper_discover/candidates/migrations/: 001_m2_saturation.sql
paper_discover/config/: models.yaml  sources.yaml
paper_discover/models/: embedding.py  reranker.py  structured_output.py  vector_store.py  vllm_client.py
paper_discover/pipeline/: graph.py  stage0_plan.py  stage1_query.py  stage4_saturate.py  stage5_skeptic.py  stage6_hygiene.py  stage7_coverage.py
paper_discover/prompts/: clarification.txt  cross_domain.txt  gap_list.txt  main_judge.txt  planner.txt  query_planner.txt  skeptic.txt
paper_discover/tests/: test_db.py  test_level_rule.py  test_m2.py  test_m3.py  test_m4.py  test_m5.py  test_m6.py  test_m7.py  test_m8.py  test_m9.py
paper_discover/web/: __init__.py  app.py
paper_discover/zotero/: client.py
static/: index.html
(+11 files in other folders)
