[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-discover"
version = "0.1.0"
description = "Multi-agent literature discovery with calibrated coverage"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "httpx>=0.27",
    "openai>=1.30",
    "langgraph>=0.2",
    "sentence-transformers>=3",
    "numpy>=1.26",
    "python-ulid>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
# Persistent embedding cache (M3). Falls back to in-memory dict if absent.
vec = ["lancedb>=0.11", "pyarrow>=15"]
# FastAPI web app (M8) and HTTP test client.
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "httpx>=0.27"]

[project.scripts]
paper-discover = "paper_discover.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["paper_discover*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["paper_discover/tests"]
